fix: gap

--- a/src/styles/components/SideNav.pcss
+++ b/src/styles/components/SideNav.pcss
@@ -148,6 +148,7 @@
         &-list {
           display: none;
           flex-wrap: wrap;
+          gap: $component--padding-inside;
 
           & > .$(prefix)--sidenav-item {
             & > .$(prefix)--sidenav-item__icon > svg {
